--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "node app.js"
   },
   "repository": {
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/WallaceGomes/nodejs-rest-tdd#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.13"
   },
   "devDependencies": {
     "jest": "^26.0.1"
