--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/WallaceGomes/nodejs-rest-tdd#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.9.13"
+    "mongoose": "^5.9.13",
+    "node-mocks-http": "^1.8.1"
   },
   "devDependencies": {
     "jest": "^26.0.1"
